--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -225,18 +225,20 @@ for (pat.id in 1:max(eGFR.dt$id)){
   
   # create a summary table
   summary.egfr.table <- rbind(summary.egfr.table, c(pat.id, avg.egfr, avg.fu.years))
+  
+  # increment the respective bin counter by 1
   if ( is.na(avg.egfr) ){
     missing.avg.egfr <- missing.avg.egfr + 1
-  } else if (avg.egfr >= 0 && avg.egfr < 15){
-    CKD.stage.1 <- CKD.stage.1 + 1
-  } else if (avg.egfr >= 15 && avg.egfr < 30){
-    CKD.stage.2 <- CKD.stage.2 + 1
-  } else if (avg.egfr >= 30 && avg.egfr < 60){
-    CKD.stage.3 <- CKD.stage.3 + 1
-  } else if (avg.egfr >= 60 && avg.egfr < 90){
-    CKD.stage.4 <- CKD.stage.4 + 1
-  } else if (avg.egfr > 90){
+  } else if (avg.egfr > 0 && avg.egfr <= 15){
     CKD.stage.5 <- CKD.stage.5 + 1
+  } else if (avg.egfr > 15 && avg.egfr <= 30){
+    CKD.stage.4 <- CKD.stage.4 + 1
+  } else if (avg.egfr > 30 && avg.egfr <= 60){
+    CKD.stage.3 <- CKD.stage.3 + 1
+  } else if (avg.egfr > 60 && avg.egfr <= 90){
+    CKD.stage.2 <- CKD.stage.2 + 1
+  } else if (avg.egfr > 90){
+    CKD.stage.1 <- CKD.stage.1 + 1
   }
 }
 
@@ -248,7 +250,7 @@ head(summary.egfr.dt)
 Tabulating the number of patients with average eGFR in the following ranges:
 (0, 15], (15, 30], (30, 60], (60, 90], (90, ∞)
 ```{r}
-CKD.stages.dt <- data.table("CKD stage" = c("V","IV","III","II","I"), 
+CKD.stages.dt <- data.table("CKD stage" = c("I","II","III","IV","V"), 
                             "N Patients" = c(CKD.stage.1, CKD.stage.2, CKD.stage.3, CKD.stage.4, CKD.stage.5))
 
 CKD.stages.dt
@@ -272,8 +274,69 @@ stopifnot( all(eGFR.dt[, c("id", "fu.years")] == eGFR.dt[order(id, fu.years), fu
 # summary.egfr.dt
 setorderv(summary.egfr.dt, c("pat.id","avg.fu.years"), c(1,1))
 stopifnot( all(summary.egfr.dt[, c("pat.id", "avg.fu.years")] == summary.egfr.dt[order(pat.id, avg.fu.years), avg.fu.years, by = pat.id]))
-
 ```
+
+Fitting a linear regression model for the eGFR measurements as a function of time 
+for each patient with at least 3 eGFR readings and store it in the `summary.egfr.dt` data table
+```{r}
+# create empty vector
+lr.models <- vector(mode="list", length=max(eGFR.dt$id))
+
+# loop over all patients in eGFR data table
+for (pat.id in 1:max(eGFR.dt$id)){
+  
+  # check whether patient has at least 3 eGFR readings
+  if (sum(!is.na(eGFR.dt[id == pat.id]$egfr)) >= 3){
+    # fit LR model
+    regr.egfr <- lm(egfr ~  fu.years, data = eGFR.dt[id == pat.id], na.action = na.omit)
+  } else {
+    regr.egfr <- NA
+  }
+  
+  lr.models[[pat.id]] <- regr.egfr
+  
+}
+
+# add LR models to the summary data table
+summary.egfr.dt <- cbind(summary.egfr.dt, lr.models)
+```
+
+Counting how many patients have a slope < -3, [-3, 0), [0, 3], > 3
+```{r}
+# Creating slope bins
+slope.1 <- 0 # < -3
+slope.2 <- 0 # [-3, 0)
+slope.3 <- 0 # [0, 3]
+slope.4 <- 0 # > 3
+
+# Looping over entries of summary data table
+for (id in 1:max(summary.egfr.dt$pat.id)){
+  
+  # check whether LR model exists
+  if (!is.na(summary.egfr.dt[pat.id == id ]$lr.models)){
+    
+    # assign slope of the model to variable
+    slope <- coef(summary.egfr.dt[pat.id == id ]$lr.models[[1]])[2]
+    
+    # increment the respective bin counter by 1
+    if (slope < -3){
+      slope.1 <- slope.1 + 1
+    } else if (slope >= -3 && slope < 0){
+      slope.2 <- slope.2 + 1
+    } else if (slope >= 0 && slope <= 3){
+      slope.3 <- slope.3 + 1
+    } else if (slope > 3){
+      slope.4 <- slope.4 + 1
+    }
+  }
+}
+
+# create data table
+slopes.dt <- data.table("slope" = c("< -3","[-3, 0)","[0, 3]","> 3"), 
+                        "N Patients" = c(slope.1, slope.2, slope.3, slope.4))
+slopes.dt
+```
+
 #### Problem 2 (c)
 
 #### Problem 2 (d)
