--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -57,6 +57,7 @@ cohort.dt[, diabetes := as.factor(diabetes)]
 ```
 
 Performing assertion checks:
+
 * to ensure that all identifiers in cohort.csv have been accounted for
 * to ensure that any validation fields are consistent between sets
 ```{r}
@@ -88,6 +89,7 @@ cohort.dt[, age := ifelse(is.na(age), age.offset-yob, age)]
 
 Creating a separate data table to provide a summary of the data in the `cohort.dt` table.
 It contains a row for each column in the `cohort.dt` table and the following columns:
+
 * variable name
 * Median (Interquartile Range) for continuous non-categorical data and N (%) for cate-
 gorical
@@ -205,41 +207,16 @@ Computing the average eGFR and length of follow-up for each patient:
 ```{r}
 summary.egfr.table <- NULL
 
-# creating bins for eGFR ranges:
-CKD.stage.1 <- 0
-CKD.stage.2 <- 0
-CKD.stage.3 <- 0
-CKD.stage.4 <- 0
-CKD.stage.5 <- 0
-
-# creating bin for missing average eGFR
-missing.avg.egfr <- 0
-
 for (pat.id in 1:max(eGFR.dt$id)){
   
   # calculate average eGFR for each patient
-  avg.egfr <- mean(eGFR.dt[id == pat.id]$egfr)
+  avg.egfr <- mean(eGFR.dt[id == pat.id]$egfr, na.rm = TRUE)
   
   # calculate average follow-up for each patient
-  avg.fu.years <- mean(eGFR.dt[id == pat.id]$fu.years)
+  avg.fu.years <- mean(eGFR.dt[id == pat.id]$fu.years, na.rm = TRUE)
   
   # create a summary table
   summary.egfr.table <- rbind(summary.egfr.table, c(pat.id, avg.egfr, avg.fu.years))
-  
-  # increment the respective bin counter by 1
-  if ( is.na(avg.egfr) ){
-    missing.avg.egfr <- missing.avg.egfr + 1
-  } else if (avg.egfr > 0 && avg.egfr <= 15){
-    CKD.stage.5 <- CKD.stage.5 + 1
-  } else if (avg.egfr > 15 && avg.egfr <= 30){
-    CKD.stage.4 <- CKD.stage.4 + 1
-  } else if (avg.egfr > 30 && avg.egfr <= 60){
-    CKD.stage.3 <- CKD.stage.3 + 1
-  } else if (avg.egfr > 60 && avg.egfr <= 90){
-    CKD.stage.2 <- CKD.stage.2 + 1
-  } else if (avg.egfr > 90){
-    CKD.stage.1 <- CKD.stage.1 + 1
-  }
 }
 
 colnames(summary.egfr.table) <- c("pat.id", "avg.gfr", "avg.fu.years") # assign colnames to table
@@ -250,16 +227,12 @@ head(summary.egfr.dt)
 Tabulating the number of patients with average eGFR in the following ranges:
 (0, 15], (15, 30], (30, 60], (60, 90], (90, ∞)
 ```{r}
-CKD.stages.dt <- data.table("CKD stage" = c("I","II","III","IV","V"), 
-                            "N Patients" = c(CKD.stage.1, CKD.stage.2, CKD.stage.3, CKD.stage.4, CKD.stage.5))
-
-CKD.stages.dt
+egfr.bins <- c(0, 15, 30, 60, 90, Inf)
+table(cut(summary.egfr.dt$avg.gfr, egfr.bins))
 ```
 
 Counting and reporting the number of patients with missing average eGFR:
 ```{r}
-# first, assert that our count was correct
-stopifnot(sum(is.na(summary.egfr.dt$avg.gfr)) == missing.avg.egfr)
 # number of patients with missing average eGFR
 sum(is.na(summary.egfr.dt$avg.gfr))
 ```
@@ -339,7 +312,40 @@ slopes.dt
 
 #### Problem 2 (c)
 
+For patients with average eGFR in the (0,15] range, collecting their identifier, sex, age at baseline, average eGFR, time of last eGFR reading and number of eGFR measurements taken in a data table:
+```{r}
+eGFR.le.15 <- NULL
+
+for (i in 1:max(summary.egfr.dt$pat.id)){
+  avg.gfr <- summary.egfr.dt[pat.id == i]$avg.gfr
+
+  if (!is.na(avg.gfr) && avg.gfr > 0 && avg.gfr <= 15){
+    sex <- eGFR.dt[id == i]$sex[1]
+    age <- eGFR.dt[id == i]$baseline.age[1]
+    last.egfr <- last(eGFR.dt[id == i]$fu.years)
+    egfr.measurements <- sum(!is.na(eGFR.dt[id == i]$egfr))
+    
+    eGFR.le.15 <- rbind(eGFR.le.15, c(i, sex, age, avg.gfr, last.egfr, egfr.measurements))
+
+  }
+  
+}
+
+eGFR.le.15.dt <- data.table(eGFR.le.15)
+colnames(eGFR.le.15.dt) <- c('Patient ID', 'Sex', 'Age (baseline)', 'average eGFR', 'last eGFR measurments', 'eGFR measurements')
+
+head(eGFR.le.15.dt)
+```
+
 #### Problem 2 (d)
+
+For patients 3, 37, 162 and 223 (one at a time):
+
+* ploting the patient’s eGFR measurements as a function of time
+* fitting a linear regression model and add the regression line to the plot
+* reporting the 95% confidence interval for the regression coefficients of the fitted model
+* using a different colour, plot a second regression line computed after removing the
+extreme eGFR values (one each of the highest and the lowest value)
 
 ### Problem 3
 
